fix: refine members birthday ui
